--- a/drecognizer/index.html
+++ b/drecognizer/index.html
@@ -1,17 +1,19 @@
-﻿
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
+
 <head>
     <title>Handwritten Digit Recognition</title>
     <script type="text/javascript" src="data.js"></script>
     <script type="text/javascript" src="app.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+
 <body style="padding:5px; margin:20px; font-family:Arial">
     <div>
         <div style="font-size: 24px">
             Draw a digit in the box below and click the "recognize" button.
         </div>
-        <div style="padding-top:15px; display: inline-block">        
+        <div style="padding-top:15px; display: inline-block">
             <canvas id="canvas_text" width="280" height="280" style="border:2px solid;"></canvas>
             <div>
                 <input type="button" value="clear" id="button_clear">
@@ -19,16 +21,16 @@
             </div>
         </div>
         <div style="display: inline-block; vertical-align: top;">
-        <div id="div_output" style="float:left; vertical-align: top; font-size:200px;margin-left:80px;" ></div> 
-        <div id="div_stats" style="float:left; padding-top:40px; padding-left: 60px"></div>
+            <div id="div_output" style="float:left; vertical-align: top; font-size:200px;margin-left:80px;"></div>
+            <div id="div_stats" style="float:left; padding-top:40px; padding-left: 60px"></div>
         </div>
     </div>
     <div style="padding-top: 10px; line-height: 1.5">
-        Reference: <a href="http://neuralnetworksanddeeplearning.com/chap1.html" target="_blank">Using neural nets to recognize handwritten digits</a><br />
-        Training: MNIST (Mixed National Institute of Standards and Technology) dataset<br />
-        Input: 784 (28x28 grayscale image) <br />
-        Hidden Layer: 200 nodes (weights: (784 + 1) x 200) - Activation function: logistic non-linearity <br />
-        Output Layer: 10 nodes (weights: (200 + 1) x 10) - Classifier: softmax  <br />
+        Reference: <a href="http://neuralnetworksanddeeplearning.com/chap1.html" target="_blank">Using neural nets to recognize handwritten digits</a><br
+        /> Training: MNIST (Mixed National Institute of Standards and Technology) dataset<br /> Input: 784 (28x28 grayscale
+        image) <br /> Hidden Layer: 200 nodes (weights: (784 + 1) x 200) - Activation function: logistic non-linearity <br
+        /> Output Layer: 10 nodes (weights: (200 + 1) x 10) - Classifier: softmax <br />
     </div>
 </body>
+
 </html>
