update home addresses

--- a/uoit/imaginglab/publications.html
+++ b/uoit/imaginglab/publications.html
@@ -15,11 +15,11 @@
   <div id="wrapper960" class="clearfix">
     <div id="header" class="clearfix shadow">
       <div style="color: rgb(0, 0, 172);" id="sitetitle" class="clearfix">
-        <h1><a href="/">ImagingLab.ca</a></h1>
+        <h1><a href="http://www.ImagingLab.ca">ImagingLab.ca</a></h1>
       </div>
       <div id="nav" class="clearfix">
         <ul>
-          <li><a href="/">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="people.html">People</a></li>
           <li><a href="research.html">Research</a></li>
           <li><a class="current" href="publications.html">Publications</a></li>
