--- a/uoit/imaginglab/contact.html
+++ b/uoit/imaginglab/contact.html
@@ -15,7 +15,7 @@
   <div id="wrapper960" class="clearfix">
     <div id="header" class="clearfix shadow">
       <div style="color: rgb(0, 0, 172);" id="sitetitle" class="clearfix">
-        <h1><a href="http://www.ImagingLab.ca">ImagingLab.ca</a></h1>
+        <h1><a href=".">ImagingLab.ca</a></h1>
       </div>
       <div id="nav" class="clearfix">
         <ul>
@@ -28,6 +28,7 @@
         </ul>
       </div>
     </div>
+    
     <div class="slider-wrapper">
       <div id="slider" class="nivoSlider">
         <img src="images/slider1.jpg" alt="">
@@ -36,24 +37,29 @@
         <img src="images/slider4.jpg" alt="">
       </div>
     </div>
-    <div id="content" class="clearfix shadow"> <br>
-      <span style="font-weight: bold;"><img style="width: 133px; height: 107px;"
-            title="Mehran Ebrahimi" alt="Mehran Ebrahimi" src="images/MehranEbrahimi.jpg"></span>
-      <p><span style="font-weight: bold;">Mehran Ebrahimi, PhD<br>
-          </span>Assistant Professor<br>
-        <font size="2">Faculty of Science, UOIT<br> 2000 Simcoe Street North<br> Oshawa, Ontario</font><br>
-        <font size="2">
-          <font size="2">L1H 7K4 </font>Canada <br> office: UA-2022<br>
-        </font><br>
-        <font size="2">E-mail: <span style="text-decoration: underline;">mehran.ebrahimi@uoit.ca</span><br> Tel:&nbsp; (905) 721-8668 ext.
-          6236
-        </font><br> Fax:
-        <font size="2">(905) 721-3304<br> URL: <a href="http://www.ImagingLab.ca"><span style="text-decoration: underline;">http://www.ImagingLab.ca</span></a></font>
-      </p>
+
+    <div id="content" class="clearfix shadow">
+      <div>
+        <img style="width: 133px; height: 107px; border:solid 1px gray" title="Mehran Ebrahimi" alt="Mehran Ebrahimi" src="images/MehranEbrahimi.jpg" />
+      </div>
+      <br />
+      <div style="font-weight: bold;">Mehran Ebrahimi, PhD</div>
+      <div>Assistant Professor</div>
+      <div>Faculty of Science, UOIT</div> 
+      <div>2000 Simcoe Street North</div>
+      <div>Oshawa, Ontario</div>
+      <div>L1H 7K4 Canada </div> 
+      <div>office: UA-2022</div>
+      <br />
+      <div>E-mail: <a href="mailto:mehran.ebrahimi@uoit.ca" style="text-decoration: underline;">mehran.ebrahimi@uoit.ca</a></div>
+      <div>Tel: (905) 721-8668 ext. 6236</div>
+      <div>Fax: (905) 721-3304</div> 
+      <div>URL: <a href="http://www.ImagingLab.ca" style="text-decoration: underline;">http://www.ImagingLab.ca</a></div>
     </div>
+
     <div id="footer" class="shadow">
       <p>
-        <a href="http://www.uoit.ca" target="_blank">
+        <a href="http://www.uoit.ca">
           <img  style="width: 78px; height: 25px;" longdesc="http://www.uoit.ca" title="UOIT" alt="UOIT" src="images/logo-uoit1.jpg" />
         </a>
         <br>
