--- a/uoit/imaginglab/people.html
+++ b/uoit/imaginglab/people.html
@@ -15,7 +15,7 @@
   <div id="wrapper960" class="clearfix">
     <div id="header" class="clearfix shadow">
       <div style="color: rgb(0, 0, 172);" id="sitetitle" class="clearfix">
-        <h1><a href="http://www.ImagingLab.ca">ImagingLab.ca</a></h1>
+        <h1><a href=".">ImagingLab.ca</a></h1>
       </div>
       <div id="nav" class="clearfix">
         <ul>
@@ -28,6 +28,7 @@
         </ul>
       </div>
     </div>
+
     <div class="slider-wrapper">
       <div id="slider" class="nivoSlider">
         <img src="images/slider1.jpg" alt="">
@@ -36,6 +37,7 @@
         <img src="images/slider4.jpg" alt="">
       </div>
     </div>
+
     <div id="content" class="clearfix shadow">
       <h2>Members</h2>
       <h3> <span style="font-weight: bold;"><img  style="width: 133px; height: 107px;"
@@ -45,21 +47,18 @@
         </span>Assistant Professor<br>
       <font size="2">Faculty of Science, UOIT<br>
       </font><br>
-      <font style="font-weight: bold;" size="2"><span style="mso-fareast-font-family:
-&quot;Times New Roman&quot;;color:black">Education</span></font><br> Postdoctoral Fellowship
-      <font size="2"><span style="mso-fareast-font-family:
-&quot;Times New Roman&quot;;color:black"><span  class="GramE"><span  style="color: #666666;">,</span>
+      <font style="font-weight: bold;" size="2"><span style="color:black">Education</span></font><br> Postdoctoral Fellowship
+      <font size="2"><span style="color:black"><span  class="GramE"><span  style="color: #666666;">,</span>
         </span>
         </span><a href="http://medbio.utoronto.ca/">Dept. of Medical
             Biophysics</a>, <a href="http://www.utoronto.ca/">University of
-            Toronto</a><span style="mso-fareast-font-family:
-&quot;Times New Roman&quot;;color:black">, </span>Imaging Research, <a href="http://www.sunnybrook.ca/">Sunnybrook
-            Health Sciences Centre</a><span style="mso-fareast-font-family:&quot;Times New Roman&quot;;color:black">
+            Toronto</a><span style="color:black">, </span>Imaging Research, <a href="http://www.sunnybrook.ca/">Sunnybrook
+            Health Sciences Centre</a><span style="color:black">
           </span></font>
       <font size="2">(2008-2013)</font>
-      <font size="2"><span style="mso-fareast-font-family:&quot;Times New Roman&quot;;color:black"><br>
+      <font size="2"><span style="color:black"><br>
           </span></font>
-      <font size="2">PhD, <span style="mso-fareast-font-family:&quot;Times New Roman&quot;;color:black"><a
+      <font size="2">PhD, <span style="color:black"><a
 
                href="http://www.math.uwaterloo.ca/AM_Dept/">Department of
               Applied Mathematics</a>, <a  href="http://www.uwaterloo.ca">University
@@ -68,8 +67,7 @@
       <font size="2"><br>
         <br>
       </font>
-      <font style="font-weight: bold;" size="2"><span style="mso-fareast-font-family:
-&quot;Times New Roman&quot;;color:black">Awards</span></font><br>
+      <font style="font-weight: bold;" size="2"><span style="color:black">Awards</span></font><br>
       <font size="2">Canadian Breast Cancer Foundation (CBCF) Postdoctoral Fellowship
       </font> (2010-2013)<br>
       <font size="2">NSERC Postdoctoral Fellowship (2009-2010)<br>
@@ -121,9 +119,10 @@
       <font size="2"><br>
       </font><br>
     </div>
+
     <div id="footer" class="shadow">
       <p>
-        <a href="http://www.uoit.ca" target="_blank">
+        <a href="http://www.uoit.ca">
           <img  style="width: 78px; height: 25px;" longdesc="http://www.uoit.ca" title="UOIT" alt="UOIT" src="images/logo-uoit1.jpg" />
         </a>
         <br>
