--- a/uoit/imaginglab/publications.html
+++ b/uoit/imaginglab/publications.html
@@ -15,7 +15,7 @@
   <div id="wrapper960" class="clearfix">
     <div id="header" class="clearfix shadow">
       <div style="color: rgb(0, 0, 172);" id="sitetitle" class="clearfix">
-        <h1><a href="http://www.ImagingLab.ca">ImagingLab.ca</a></h1>
+        <h1><a href=".">ImagingLab.ca</a></h1>
       </div>
       <div id="nav" class="clearfix">
         <ul>
@@ -28,6 +28,7 @@
         </ul>
       </div>
     </div>
+
     <div class="slider-wrapper">
       <div id="slider" class="nivoSlider">
         <img src="images/slider1.jpg" alt="">
@@ -36,6 +37,7 @@
         <img src="images/slider4.jpg" alt="">
       </div>
     </div>
+
     <div id="content" class="clearfix shadow">
       <h1>Selected Publications&nbsp;&nbsp;&nbsp; </h1>
       <h4>&nbsp;[Updated Sept. 2013]</h4>
@@ -184,9 +186,10 @@
       <br>
       <br>
     </div>
+    
     <div id="footer" class="shadow">
       <p>
-        <a href="http://www.uoit.ca" target="_blank">
+        <a href="http://www.uoit.ca">
           <img  style="width: 78px; height: 25px;" longdesc="http://www.uoit.ca" title="UOIT" alt="UOIT" src="images/logo-uoit1.jpg" />
         </a>
         <br>
