--- a/uoit/imaginglab/index.html
+++ b/uoit/imaginglab/index.html
@@ -28,85 +28,89 @@
         </ul>
       </div>
     </div>
+
     <div class="slider-wrapper">
       <div id="slider" class="nivoSlider">
-        <img src="images/slider1.jpg" alt="">
-        <img src="images/slider2.jpg" alt=""> 
-        <img src="images/slider3.jpg" alt="">
-        <img src="images/slider4.jpg" alt="">
+        <img src="images/slider1.jpg">
+        <img src="images/slider2.jpg">
+        <img src="images/slider3.jpg">
+        <img src="images/slider4.jpg">
       </div>
     </div>
-    <div id="content" class="clearfix shadow">
-      <h2>Welcome to Imaging Lab&nbsp; </h2>
-      <p>Imaging Lab is hosted in the <a href="http://www.science.uoit.ca">Faculty
-            of Science</a> at the University of Ontario Institute of Technology
-        <a href="http://www.uoit.ca">(UOIT)</a>. Our research is focused in the diverse area of <span style="font-weight: bold;">mathematical
-            imaging</span> and <span style="font-weight: bold;">inverse
-            problems</span>. Imaging Lab's long-term research objective is directed towards developing and validating efficient
-        numerical methodologies for solving real-world ill-posed inverse problems in the field of <span style="font-weight: bold;">medical imaging</span>.
-        Imaging Lab is affiliated with the <a href="http://www.science.uoit.ca/graduate/modelling-computational-science/"
-          id="http://www.science.uoit.ca/graduate/modelling-computational-science/"><span
 
-               style="font-weight: bold;">Modelling and Computational Science
-              graduate program</span></a> at UOIT.</p>
+    <div id="content" class="clearfix shadow">
+      <h2>Welcome to Imaging Lab</h2>
+      <p>
+        Imaging Lab is hosted in the <a href="http://www.science.uoit.ca">Faculty of Science</a> at the University of Ontario
+        Institute of Technology <a href="http://www.uoit.ca">(UOIT)</a>. Our research is focused in the diverse area of
+        <span class="emph">mathematical imaging</span> and <span class="emph">inverse problems</span>. Imaging Lab's long-term
+        research objective is directed towards developing and validating efficient numerical methodologies for solving real-world
+        ill-posed inverse problems in the field of <span class="emph">medical imaging</span>. Imaging Lab is affiliated with
+        the
+        <a href="http://www.science.uoit.ca/graduate/modelling-computational-science/" class="emph">
+          Modelling and Computational Science graduate program
+        </a> at UOIT.
+      </p>
     </div>
+
     <div id="extended" class="clearfix shadow">
       <div id="trio1">
         <div class="inner">
           <h3>Contact<br>
             <br>
-            <img style="width: 97px; height: 123px;" title="Mehran Ebrahimi" alt="Mehran Ebrahimi" src="images/mehran.jpg"><br>
+            <img style="width: 97px; height: 123px" title="Mehran Ebrahimi" alt="Mehran Ebrahimi" src="images/mehran.jpg"><br>
           </h3>
-          <p><span style="font-weight: bold;">Mehran Ebrahimi, PhD<br>
-              </span>Assistant Professor<br>
-            <font size="2">Faculty of Science, UOIT<br> 2000 Simcoe Street North<br> Oshawa, Ontario</font><br>
-            <font size="2">
-              <font size="2">L1H 7K4 </font>Canada <br> office: UA-2022<br>
-            </font><br>
-            <font size="2">E-mail: <span style="text-decoration: underline;">mehran.ebrahimi@uoit.ca</span><br> Tel:&nbsp; (905) 721-8668
-              ext. 6236</font><br> Fax:
-            <font size="2">(905) 721-3304<br> URL: <a href="http://www.ImagingLab.ca"><span  style="text-decoration: underline;">http://www.ImagingLab.ca<br>
-                  </span></a> <br> &nbsp; <br>
-            </font>
-          </p>
+          <div style="font-weight: bold;">Mehran Ebrahimi, PhD</div>
+          <div>Assistant Professor</div>
+          <div>Faculty of Science, UOIT</div>
+          <div>2000 Simcoe Street North</div>
+          <div>Oshawa, Ontario</div>
+          <div>L1H 7K4 Canada </div>
+          <div>office: UA-2022</div>
+          <br />
+          <div>E-mail: <a href="mailto:mehran.ebrahimi@uoit.ca" style="text-decoration: underline;">mehran.ebrahimi@uoit.ca</a></div>
+          <div>Tel: (905) 721-8668 ext. 6236</div>
+          <div>Fax: (905) 721-3304</div>
+          <div>URL: <a href="http://www.ImagingLab.ca" style="text-decoration: underline;">http://www.ImagingLab.ca</a></div>
         </div>
       </div>
+
       <div id="trio2">
         <div class="inner">
           <h3>News and Events</h3>
-          <p><br>
-            <span class="st"><span  style="font-weight: bold;">Graduate
-                  students:</span> Imaging Lab </span>is recruiting graduate students. Please send us a description
-            of your specific research interests and skills.<br>
+          <p class="st">
+            <span class="emph">Graduate students:</span> Imaging Lab is recruiting graduate students. Please send us a description
+            of your specific research interests and skills.
           </p>
-          <a class="twitter-timeline" href="https://twitter.com/Imaging_Lab" data-widget-id="702334050803908608" height="400" data-chrome="nofooter noheader">Tweets
-              by @Imaging_Lab</a>
+          <a class="twitter-timeline" href="https://twitter.com/Imaging_Lab" data-widget-id="702334050803908608" height="400" data-chrome="nofooter noheader">
+            Tweets by @Imaging_Lab
+          </a>
           <div>
-            <a href="https://twitter.com/Imaging_Lab" class="twitter-follow-button" data-show-count="false">Follow @Imaging_Lab</a>            </div>
+            <a href="https://twitter.com/Imaging_Lab" class="twitter-follow-button" data-show-count="false">
+              Follow @Imaging_Lab
+            </a>
+          </div>
           <script>
-            !function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https'; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = p + "://platform.twitter.com/widgets.js"; fjs.parentNode.insertBefore(js, fjs); } }(document, "script", "twitter-wjs");
+            !function (d, s, id) {
+              var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
+              if (!d.getElementById(id)) {
+                js = d.createElement(s); 
+                js.id = id; 
+                js.src = p + "://platform.twitter.com/widgets.js"; 
+                fjs.parentNode.insertBefore(js, fjs);
+              }
+            }(document, "script", "twitter-wjs");
           </script>
         </div>
       </div>
-      <div id="trio3">
-        <div class="inner">
-          <p><span style="font-weight: bold;"><br>
-              </span>
-            <font size="2"><br>
-              <br>
-            </font>
-            <font size="2"><span style="text-decoration: underline;"></span></font>
-          </p>
-        </div>
-      </div>
     </div>
+
     <div id="footer" class="shadow">
       <p>
-        <a href="http://www.uoit.ca" target="_blank">
+        <a href="http://www.uoit.ca">
           <img  style="width: 78px; height: 25px;" longdesc="http://www.uoit.ca" title="UOIT" alt="UOIT" src="images/logo-uoit1.jpg" />
         </a>
-        <br>
-        ©ImagingLab.ca, Dr. Mehran Ebrahimi 
+        <br> ©ImagingLab.ca, Dr. Mehran Ebrahimi
       </p>
     </div>
   </div>
