--- a/uoit/imaginglab/teaching.html
+++ b/uoit/imaginglab/teaching.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
+  <title>ImagingLab.ca, Teaching</title>
   <meta content="text/html; charset=utf-8" http-equiv="content-type">
   <meta name="description" content="ImagingLab, Mehran Ebrahimi, UOIT">
   <link rel="stylesheet" type="text/css" media="all" href="inland.css">
   <script type="text/javascript" src="resources/jquery-1.7.1.min.js"></script>
   <script type="text/javascript" src="resources/jquery.nivo.slider.js"></script>
   <script type="text/javascript" src="resources/site.js"></script>
-  <title>ImagingLab.ca, Teaching</title>
 </head>
 
 <body>
@@ -32,7 +32,7 @@
     <div class="slider-wrapper">
       <div id="slider" class="nivoSlider">
         <img src="images/slider1.jpg" alt="">
-        <img src="images/slider2.jpg" alt=""> 
+        <img src="images/slider2.jpg" alt="">
         <img src="images/slider3.jpg" alt="">
         <img src="images/slider4.jpg" alt="">
       </div>
@@ -40,43 +40,50 @@
 
     <div id="content" class="clearfix shadow">
       <h2>Teaching </h2>
-      <h4>[Updated Sept. 2013]</h4>
-      <span style="font-weight: bold;"><br>
-          Students: Teaching content is available on <a  href="https://uoit.blackboard.com/">Blackboard</a>.<br>
-          <br>
-        </span>
-      <ul>
-        <li>Planning for Winter 2015, <span style="font-weight: bold;">Mathematics
-              of Medical Imaging</span> (Graduate course cross-listed with upper year undergraduate program), <a href="http://www.uoit.ca">UOIT<br>
-            </a></li>
-        <li>Winter 2014, <span style="font-weight: bold;">Computational
-              Science II</span> (Math 4020U, Formerly known as <span style="font-weight: bold;">Numerical
-              Analysis</span>), <a href="http://www.uoit.ca">UOIT</a></li>
-        <li>Winter 2014, <span style="font-weight: bold;">Complex Analysis</span> (Math 3060U), <a href="http://www.uoit.ca">UOIT</a></li>
-        <li>Fall 2013, <span style="font-weight: bold;">Optimization</span> (Math 3040U), <a href="http://www.uoit.ca">UOIT</a></li>
-        <li>Fall 2011, <span style="font-weight: bold;">Mathematical
-              Modelling</span> (Math 3050U), <a href="http://www.uoit.ca">UOIT</a></li>
-        <li>Fall 2006 and Fall 2007, <span style="font-weight: bold;">Introduction
-              to Differential Equations</span> (Math 218/SYDE 211), <span style="color:windowtext"><a
-
-                 href="http://www.uwaterloo.ca">University of Waterloo</a></span></li>
-        <li>Fall and Winter 2002, <span style="font-weight: bold;">Fundamental
-              Math II</span>, Applied Calculus (Math 209), <span style="color:windowtext"><a
-
-                 href="http://www.concordia.ca/">Concordia University</a></span></li>
-      </ul>
+      <div id="content_updated">
+      </div>
+      <div style="font-weight: bold;">
+        Students: Teaching content is available on <a href="https://uoit.blackboard.com/">Blackboard</a>.<br>
+      </div>
+      <br />
+      <div id="content_teaching">
+      </div>
     </div>
-    
+
     <div id="footer" class="shadow">
       <p>
         <a href="http://www.uoit.ca">
-          <img  style="width: 78px; height: 25px;" longdesc="http://www.uoit.ca" title="UOIT" alt="UOIT" src="images/logo-uoit1.jpg" />
-        </a>
-        <br>
-        ©ImagingLab.ca, Dr. Mehran Ebrahimi 
+                    <img style="width: 78px; height: 25px;" longdesc="http://www.uoit.ca" title="UOIT" alt="UOIT" src="images/logo-uoit1.jpg" />
+                </a>
+        <br> ©ImagingLab.ca, Dr. Mehran Ebrahimi
       </p>
     </div>
   </div>
+
+  <script type="text/javascript">
+    page.ready(function (data) {
+
+      var content = '';
+
+      for (var i = 0; i < page.data.teaching.length; i++) {
+        var item = page.data.teaching[i];
+        content += '<li>';
+        content += item.semester;
+        content += ', <span style="font- weight: bold;">';
+        content += item.title;
+        content += '</span>(';
+        content += item.description;
+        content += '), <a target="_blank" href="' + item.url + '">';
+        content += item.university;
+        content += '</a>';
+        content += '</li>';
+      }
+
+      $("#content_updated").append("<h4>[Updated " + page.data.updated + "]</h4>");
+      $("#content_teaching").append("<ul>" + content + "</ul>");
+    });
+  </script>
+
 </body>
 
 </html>
