--- a/uoit/imaginglab/teaching.html
+++ b/uoit/imaginglab/teaching.html
@@ -2,87 +2,88 @@
 <html>
 
 <head>
-  <title>ImagingLab.ca, Teaching</title>
-  <meta content="text/html; charset=utf-8" http-equiv="content-type">
-  <meta name="description" content="ImagingLab, Mehran Ebrahimi, UOIT">
-  <link rel="stylesheet" type="text/css" media="all" href="inland.css">
-  <script type="text/javascript" src="resources/jquery-1.7.1.min.js"></script>
-  <script type="text/javascript" src="resources/jquery.nivo.slider.js"></script>
-  <script type="text/javascript" src="resources/site.js"></script>
+    <title>ImagingLab.ca, Teaching</title>
+    <meta content="text/html; charset=utf-8" http-equiv="content-type">
+    <meta name="description" content="ImagingLab, Mehran Ebrahimi, UOIT">
+    <link rel="stylesheet" type="text/css" media="all" href="inland.css">
+    <script type="text/javascript" src="resources/jquery-1.7.1.min.js"></script>
+    <script type="text/javascript" src="resources/jquery.nivo.slider.js"></script>
+    <script type="text/javascript" src="resources/multiplex.min.js"></script>
+    <script type="text/javascript" src="resources/site.js"></script>
 </head>
 
 <body>
-  <div id="wrapper960" class="clearfix">
-    <div id="header" class="clearfix shadow">
-      <div style="color: rgb(0, 0, 172);" id="sitetitle" class="clearfix">
-        <h1><a href=".">ImagingLab.ca</a></h1>
-      </div>
-      <div id="nav" class="clearfix">
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="people.html">People</a></li>
-          <li><a href="research.html">Research</a></li>
-          <li><a href="publications.html">Publications</a></li>
-          <li><a class="current" href="teaching.html">Teaching</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </div>
-    </div>
+    <div id="wrapper960" class="clearfix">
+        <div id="header" class="clearfix shadow">
+            <div style="color: rgb(0, 0, 172);" id="sitetitle" class="clearfix">
+                <h1><a href=".">ImagingLab.ca</a></h1>
+            </div>
+            <div id="nav" class="clearfix">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="people.html">People</a></li>
+                    <li><a href="research.html">Research</a></li>
+                    <li><a href="publications.html">Publications</a></li>
+                    <li><a class="current" href="teaching.html">Teaching</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </div>
 
-    <div class="slider-wrapper">
-      <div id="slider" class="nivoSlider">
-        <img src="images/slider1.jpg" alt="">
-        <img src="images/slider2.jpg" alt="">
-        <img src="images/slider3.jpg" alt="">
-        <img src="images/slider4.jpg" alt="">
-      </div>
-    </div>
+        <div class="slider-wrapper">
+            <div id="slider" class="nivoSlider">
+                <img src="images/slider1.jpg" alt="">
+                <img src="images/slider2.jpg" alt="">
+                <img src="images/slider3.jpg" alt="">
+                <img src="images/slider4.jpg" alt="">
+            </div>
+        </div>
 
-    <div id="content" class="clearfix shadow">
-      <h2>Teaching </h2>
-      <div id="content_updated">
-      </div>
-      <div style="font-weight: bold;">
-        Students: Teaching content is available on <a href="https://uoit.blackboard.com/">Blackboard</a>.<br>
-      </div>
-      <br />
-      <div id="content_teaching">
-      </div>
-    </div>
+        <div id="content" class="clearfix shadow">
+            <h2>Teaching </h2>
+            <div id="content_updated"></div>
+            <div style="font-weight: bold;">
+                Students: Teaching content is available on <a href="https://uoit.blackboard.com/">Blackboard</a>.<br>
+            </div>
+            <br />
+            <div id="content_teaching">
+            </div>
+        </div>
 
-    <div id="footer" class="shadow">
-      <p>
-        <a href="http://www.uoit.ca">
+        <div id="footer" class="shadow">
+            <p>
+                <a href="http://www.uoit.ca">
                     <img style="width: 78px; height: 25px;" longdesc="http://www.uoit.ca" title="UOIT" alt="UOIT" src="images/logo-uoit1.jpg" />
                 </a>
-        <br> ©ImagingLab.ca, Dr. Mehran Ebrahimi
-      </p>
+                <br>
+                ©ImagingLab.ca, Dr. Mehran Ebrahimi
+            </p>
+        </div>
     </div>
-  </div>
 
-  <script type="text/javascript">
-    page.ready(function (data) {
+    <script type="text/javascript">
+        page.ready(function (data) {
 
-      var content = '';
+            var content = '';
 
-      for (var i = 0; i < page.data.teaching.length; i++) {
-        var item = page.data.teaching[i];
-        content += '<li>';
-        content += item.semester;
-        content += ', <span style="font- weight: bold;">';
-        content += item.title;
-        content += '</span>(';
-        content += item.description;
-        content += '), <a target="_blank" href="' + item.url + '">';
-        content += item.university;
-        content += '</a>';
-        content += '</li>';
-      }
+            for (var i = 0; i < page.data.teaching.length; i++) {
+                var item = page.data.teaching[i];
+                content += '<li>';
+                content += item.semester;
+                content += ', <span style="font- weight: bold;">';
+                content += item.title;
+                content += '</span>(';
+                content += item.description;
+                content += '), <a target="_blank" href="' + item.url + '">';
+                content += item.university;
+                content += '</a>';
+                content += '</li>';
+            }
 
-      $("#content_updated").append("<h4>[Updated " + page.data.updated + "]</h4>");
-      $("#content_teaching").append("<ul>" + content + "</ul>");
-    });
-  </script>
+            $("#content_updated").append("<h4>[Updated " + page.data.updated + "]</h4>");
+            $("#content_teaching").append("<ul>" + content + "</ul>");
+        });
+    </script>
 
 </body>
 
