--- a/uoit/imaginglab/publications.html
+++ b/uoit/imaginglab/publications.html
@@ -107,8 +107,13 @@
             </div>
             <br /><br />
 
-
-            <h1>References</h1>
+            <h1 style="display: inline; padding-right:15px">References</h1>
+            <span>
+                <a href="#" id="a_year"> By Year </a>
+                |
+                <a href="#" id="a_type"> By Type </a>
+            </span>
+            <br />
             <br />
             <div id="content_publication"></div>
         </div>
@@ -127,18 +132,42 @@
     <script type="text/javascript">
 
         page.ready(function (data) {
-            var content = $("<div>");
+            var header = $('<h4>[Updated ' + page.data.updated + ']</h4>');
+
+            $('#a_year').click(function (e) {
+                bindPublications(true);
+                e.preventDefault();
+                e.stopPropagation();
+            });
+
+            $('#a_type').click(function (e) {
+                bindPublications(false);
+                e.preventDefault();
+                e.stopPropagation();
+            });
+
+            bindPublications(true);
+            $('#content_updated').append(header);
+        });
+
+
+        function bindPublications(by_year) {
+            var content = $('<div>');
+
+            $("a").removeClass('selected');
+            (by_year ? $('#a_year') : $('#a_type')).addClass('selected');
 
             mx(page.data.publications)
-                .groupBy(function (t) { return t.year })
-                .orderByDescending(function (t) { return t.key })
+                .groupBy(function (t) { return by_year ? t.year : t.type })
+                .orderByDescending(function (t) { return by_year ? t.key : -page.data.publicationTypes.indexOf(t.key) })
                 .forEach(function (grp) {
                     page.appendPublications(content, grp.key, grp.orderBy(function (p) { return p.code }).toArray());
                 });
 
-            $("#content_updated").append("<h4>[Updated " + page.data.updated + "]</h4>");
-            $("#content_publication").append(content);
-        });
+            $('#content_publication').empty().append(content);
+        };
+
+
     </script>
 
 </body>
