add main page title

--- a/uoit/imaginglab/site/index.html
+++ b/uoit/imaginglab/site/index.html
@@ -92,15 +92,15 @@
                         </a>
                     </div>
                     <script>
-            !function (d, s, id) {
-              var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
-              if (!d.getElementById(id)) {
-                js = d.createElement(s);
-                js.id = id;
-                js.src = p + "://platform.twitter.com/widgets.js";
-                fjs.parentNode.insertBefore(js, fjs);
-              }
-            }(document, "script", "twitter-wjs");
+                        !function (d, s, id) {
+                            var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
+                            if (!d.getElementById(id)) {
+                                js = d.createElement(s);
+                                js.id = id;
+                                js.src = p + "://platform.twitter.com/widgets.js";
+                                fjs.parentNode.insertBefore(js, fjs);
+                            }
+                        }(document, "script", "twitter-wjs");
                     </script>
                 </div>
             </div>
@@ -115,6 +115,14 @@
             </p>
         </div>
     </div>
+
+    <script type="text/javascript">
+
+        page.ready(function (data) {
+            document.title = data.title;
+        });
+
+    </script>
 </body>
 
 </html>
