--- a/uoit/imaginglab/site/p.html
+++ b/uoit/imaginglab/site/p.html
@@ -38,120 +38,25 @@
             </div>
         </div>
 
-        <div id="content" class="clearfix shadow">
-            <h2>Members</h2>
-            <h3>
-                <span style="font-weight: bold;">
-                    <img style="width: 133px; height: 107px;"
-                         title="Mehran Ebrahimi" alt="Mehran Ebrahimi" src="images/MehranEbrahimi.jpg">
-                </span>
-            </h3>
-            <span style="font-weight: bold;">
-                Mehran Ebrahimi, PhD<br>
-            </span>Assistant Professor<br>
-            <font size="2">
-                Faculty of Science, UOIT<br>
-            </font><br>
-            <font style="font-weight: bold;" size="2"><span style="color:black">Education</span></font><br> Postdoctoral Fellowship
-            <font size="2">
-                <span style="color:black">
-                    <span class="GramE">
-                        <span style="color: #666666;">,</span>
-                    </span>
-                </span><a href="http://medbio.utoronto.ca/">
-                    Dept. of Medical
-                    Biophysics
-                </a>, <a href="http://www.utoronto.ca/">
-                    University of
-                    Toronto
-                </a><span style="color:black">, </span>Imaging Research, <a href="http://www.sunnybrook.ca/">
-                    Sunnybrook
-                    Health Sciences Centre
-                </a><span style="color:black">
-                </span>
-            </font>
-            <font size="2">(2008-2013)</font>
-            <font size="2">
-                <span style="color:black">
-                    <br>
-                </span>
-            </font>
-            <font size="2">
-                PhD, <span style="color:black">
-                    <a href="http://www.math.uwaterloo.ca/AM_Dept/">
-                        Department of
-                        Applied Mathematics
-                    </a>, <a href="http://www.uwaterloo.ca">
-                        University
-                        of Waterloo
-                    </a>
-                </span>
-            </font>
-            <font size="2">, Waterloo, Ontario, Canada (2003-2008)</font>
-            <font size="2">
-                <br>
-                <br>
-            </font>
-            <font style="font-weight: bold;" size="2"><span style="color:black">Awards</span></font><br>
-            <font size="2">
-                Canadian Breast Cancer Foundation (CBCF) Postdoctoral Fellowship
-            </font> (2010-2013)<br>
-            <font size="2">
-                NSERC Postdoctoral Fellowship (2009-2010)<br>
-                <br>
-                <br>
-            </font>
-            <h2>Graduate Students</h2>
-            <br>
-            <font size="2">
-                <font size="2">
-                    •&nbsp; <span style="font-weight: bold;">
-                        Mia
-                        Carmela Mojica
-                    </span> (PhD student, to start in September 2016), MSc graduate in Applied Mathematics from the
-                    Philippines. <br>
-                    <br>
-                </font>•<span style="font-weight: bold;"> Lorraine Ma</span> (MSc student, Sept. 2014 to present), Lorraine is investigating
-                image registration schemes for Cardiac MRI for which the data is provided by Prof. Graham Wright (Sunnybrook Research
-                Institute). Lorraine won the people’s choice award at the 2016 Three Minute Thesis (3MT®). She is aiming to defend
-                her thesis in August 2015 and join the University of Auckland, New Zealand, as an exchange student in Fall 2016 on
-                a Queen Elizabeth II Diamond Jubilee Scholarship.<br>
-                <br> • <span style="font-weight: bold;">Ghazal Ahmadian</span> (MSc student, January 2015 to present), Co-supervised
-                with Dr. Sean Bohun. Ghazal is investigating breast image registration schemes aimed at Computer aided surgery (CAS),
-                for which the data is provided by Dr. Anne Martel (Sunnybrook Research Institute).<br>
-                <br>
-                <span style="font-weight: bold;">• Sancgeetha Kulaseharan</span> (MSc student, September 2015 to present), Co-supervised
-                with Dr. Elysa Widjaja (Hospital for Sick Children, Toronto), Working on combined texture and morphometric analyses
-                of MR imaging to identify focal cortical dysplasia in children with focal epilepsy.<br>
-                <br>
-                <span style="font-weight: bold;">• Cory Falconer</span> (MSc student, September 2015 to present), Co-supervised with
-                Dr. Sean Bohn, Cory is investigating resolution enhancement and denoising techniques for medical imaging applications.<br>
-                <br>
-            </font><br>
-            <h2>Undergraduate Research Students</h2>
-            <font size="2">
-                <br>
-                <span style="font-weight: bold;">• Eric NG</span> (NSERC USRA, May-August 2015). Eric's research on Joint Motion
-                Estimation and Super-resolution has resulted to a few publications. He will start working on his undergraduate thesis
-                in 2016-2017 under my supervision.<br>
-                <br>
-                <span style="font-weight: bold;">• Queenie Leung</span> (Undergraduate Thesis Student in Applied and Industrial Math,
-                UOIT, Sept 2015 to April 2016). After completing her NSERC USRA, she completed her thesis on Image Segmentation using
-                Graph cuts.<br>
-                <br>
-                <span style="font-weight: bold;">• Xu Han </span>(MITACS Globalink Research Intern, June-August 2015) Visiting from
-                Biomedical Engineering Program, Huazhong University of Science and Technology, Wuhan, China, Project: Registration
-                of Breast MR Images<br>
-                <br>
-                <span style="font-weight: bold;">• Saurabh Agarwal</span> (MITACS Globalink Research Intern, June-August 2015) Visiting
-                from School of Electronics Engineering, VIT, Chennai, India Project: Segmentation of Breast MR Images<br>
-                <br>
-            </font>
-            <font size="2">
-                <br>
-            </font><br>
-        </div>
+        <div id="content" class="clearfix shadow" style="padding: 10px 10px;">
+            <div class="table" style="width:100%; padding-top: 10px">
+                <div id="content_person" class="table-cell">
+                </div>
 
+                <div class="table-cell" style="width: 200px">
+                    <h2 style="display: inline; padding-right:15px;">Members</h2>
+                    <span>
+                        <a href="#" id="a_all" people-type="1"> All </a>
+                        |
+                        <a href="#" id="a_active" people-type="2"> Active </a>
+                        |
+                        <a href="#" id="a_alumni" people-type="3"> Alumni </a>
+                    </span>
+                    <div style="border-bottom: solid 1px #B6B6B6; height:10px"></div>
+                    <div id="content_people"></div>
+                </div>
+            </div>
+        </div>
         <div id="footer" class="shadow">
             <p>
                 <a href="http://www.uoit.ca">
@@ -162,6 +67,77 @@
             </p>
         </div>
     </div>
+
+    <script type="text/javascript">
+
+        page.ready(function (data) {
+
+            $('a[people-type]').click(function (e) {
+                bindPeople($(this).attr('people-type'));
+                e.preventDefault();
+            });
+
+            bindPeople(1);
+        });
+
+        function bindPeople(type) {
+            type = parseInt(type);
+            $("a").removeClass('selected');
+            $('a[people-type=' + type + ']').addClass('selected');
+
+            var people = page.data.people;
+            var current = people[0];
+            var content = $('<div>');
+
+            function urlEncodeName(name) {
+                return name.replace(/ /ig, '_');
+            };
+
+            for (var i = 0; i < people.length; i++) {
+                var person = people[i];
+
+                if ((type == 2 & person.alumnus) || type == 3 & !person.alumnus)
+                    continue;
+                
+                if (window.location.href.toUpperCase().indexOf(urlEncodeName(person.name.toUpperCase())) != -1)
+                    current = person;
+
+                var persoan_link = $('<a>').attr('href', '#' + person.name).click(function (e) {
+                    e.preventDefault();
+                    bindPerson(this.person);
+                    window.history.pushState(this.person, "", location.protocol + '//' + location.host + location.pathname + '#' + urlEncodeName(this.person.name));
+                });
+                persoan_link.get(0).person = person;
+
+                var person_content = $('<div>').addClass('people-item');
+                var person_image = $('<img>').attr('src', person.photo || 'images/noimage.png');
+                var person_title = $('<div>');
+                var person_name = $('<h4>' + person.name + (type != 3 && person.alumnus ? ' <label style="font-size:14px">(alumnus)</label>' : '') + '</h4>');
+                var person_position = $('<span>' + person.position + '</span></div>');
+
+                persoan_link.append(person_content);
+                person_content.append(person_image).append(person_title);
+                person_title.append(person_name).append(person_position);
+
+                content.append(persoan_link);
+            }
+
+            $('#content_people').empty().append(content);
+            bindPerson(current);
+        };
+
+        function bindPerson(person) {
+            document.title = 'ImagingLab.ca, ' + person.name;
+            $('#content_person').empty().append(person.name);
+        };
+
+        window.onpopstate = function (e) {
+            if (e.state && e.state.name) {
+                bindPerson(e.state);
+            }
+        };
+
+    </script>
 </body>
 
 </html>
