--- a/uoit/imaginglab/site/p.html
+++ b/uoit/imaginglab/site/p.html
@@ -43,7 +43,7 @@
                 <div id="content_person" class="table-cell">
                 </div>
 
-                <div class="table-cell" style="width: 200px">
+                <div class="table-cell" style="width: 280px; height:600px">
                     <h2 style="display: inline; padding-right:15px;">Members</h2>
                     <span>
                         <a href="#" id="a_all" people-type="1"> All </a>
@@ -122,7 +122,11 @@
                 content.append(persoan_link);
             }
 
-            $('#content_people').empty().append(content);
+            //$('#content_people').empty().append(content);
+            $('#content_people').fadeOut(function () {
+                $(this).empty().hide().append(content).fadeIn()
+            });
+
             bindPerson(current);
         };
 
